Add a test case for meshlink_channel_abort() in combination with AIO.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,6 +4,7 @@ TESTS = \
 	blacklist \
 	channels \
 	channels-aio \
+	channels-aio-abort \
 	channels-aio-cornercases \
 	channels-aio-fd \
 	channels-buffer-storage \
@@ -46,6 +47,7 @@ check_PROGRAMS = \
 	blacklist \
 	channels \
 	channels-aio \
+	channels-aio-abort \
 	channels-aio-cornercases \
 	channels-aio-fd \
 	channels-buffer-storage \
@@ -90,6 +92,9 @@ channels_LDADD = $(top_builddir)/src/libmeshlink.la
 
 channels_aio_SOURCES = channels-aio.c utils.c utils.h
 channels_aio_LDADD = $(top_builddir)/src/libmeshlink.la
+
+channels_aio_abort_SOURCES = channels-aio-abort.c utils.c utils.h
+channels_aio_abort_LDADD = $(top_builddir)/src/libmeshlink.la
 
 channels_aio_cornercases_SOURCES = channels-aio-cornercases.c utils.c utils.h
 channels_aio_cornercases_LDADD = $(top_builddir)/src/libmeshlink.la
