Add a test for changing ports and handling of port conflicts.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -25,6 +25,7 @@ TESTS = \
 	metering-slowping \
 	metering-tcponly \		
 	meta-connections \
+	port \
 	sign-verify \
 	storage-policy \
 	trio \
@@ -73,6 +74,7 @@ check_PROGRAMS = \
 	metering-slowping \
 	metering-tcponly \
 	meta-connections \
+	port \
 	sign-verify \
 	storage-policy \
 	stream \
@@ -166,6 +168,9 @@ metering_tcponly_LDADD = $(top_builddir)/src/libmeshlink.la
 
 meta_connections_SOURCES = meta-connections.c netns_utils.c netns_utils.h utils.c utils.h
 meta_connections_LDADD = $(top_builddir)/src/libmeshlink.la
+
+port_SOURCES = port.c utils.c utils.h
+port_LDADD = $(top_builddir)/src/libmeshlink.la
 
 sign_verify_SOURCES = sign-verify.c utils.c utils.h
 sign_verify_LDADD = $(top_builddir)/src/libmeshlink.la
